client/my-sites/theme/style.scss
@import "@automattic/onboarding/styles/mixins";

$theme-sheet-content-max-width: 1462px;
$button-border: 4px;

.is-section-theme {
	&.theme-default.color-scheme {
		--color-surface-backdrop: var(--studio-white);
	}

	.layout.is-logged-in .layout__content {
		overflow: clip;
		padding-top: var(--masterbar-height);

		@include breakpoint-deprecated( "<960px" ) {
			padding-left: 0;
			padding-right: 0;
		}

		.theme__sheet-screenshot,
		.theme__sheet-web-preview {
			@include breakpoint-deprecated( ">960px" ) {
				top: calc(var(--masterbar-height) + 16px);
			}
		}

		.theme__sheet-web-preview .theme-preview__frame-wrapper {
			@include breakpoint-deprecated( ">960px" ) {
				max-height: calc(100vh - 32px - var(--masterbar-height));
			}
		}
	}

	.layout__primary .main {
		@include breakpoint-deprecated( "<960px" ) {
			padding-bottom: 40px;
		}
	}

	.empty-content {
		margin-bottom: 20px;
	}
}

.main.theme__sheet {
	max-width: none;
}

.theme__sheet-bar {
	background-color: var(--color-masterbar-item-hover-background);
	color: var(--studio-white);
	height: 180px;
	padding: 0;
	margin: 0;
}

.theme__sheet-bar-title {
	display: flex;
	align-items: flex-end;
	font-size: $font-title-large;
	font-weight: 400;
	padding-top: 78px;
	padding-left: 25px;
	line-height: 1;
}

.theme__sheet-bar-tag {
	max-width: none;
	display: block;
	color: var(--color-text-inverted);
	font-size: $font-body;
	font-weight: 400;
	padding-top: 5px;
	padding-left: 25px;
}

.theme__sheet-bar-soft-launched {
	color: var(--color-warning-80);
	font-family: $default-font;
	font-size: 0.75rem;
	font-weight: bold;
	text-transform: uppercase;
	background-color: var(--color-warning-20);
	margin-left: 1rem;
	padding: 2px 4px;
	border-radius: 2px;
}

.button.is-borderless.theme__sheet-back-button {
	color: var(--color-neutral-100);
	font-size: $font-body-small;
	font-weight: 500;
	line-height: 20px;
	margin-bottom: 24px;
	padding: 0;

	svg {
		display: inline-block;
		height: 20px;
		margin-right: 4px;
		width: 20px;
	}

	@include breakpoint-deprecated( "<960px" ) {
		align-items: center;
		box-shadow: 0 0 0 1px var(--color-neutral-5);
		box-sizing: border-box;
		display: flex;
		height: 52px;
		margin-bottom: 16px;
		padding: 0 24px;
		width: 100%;

		svg {
			top: 2px;
		}
	}
}

.theme__sheet-columns {
	display: grid;
	gap: 0 32px;
	grid-template-areas:
		"header preview"
		"content preview";
	grid-template-columns: 1fr 1fr;
	grid-template-rows: auto 1fr;
	margin: 0 auto;
	max-width: $theme-sheet-content-max-width;
	padding: 48px 20px;

	@include breakpoint-deprecated( "<960px" ) {
		display: flex;
		gap: 16px;
		flex-direction: column;
		padding: 0;

		.theme__sheet-column-left {
			padding: 0 24px;
			order: 2;
		}

		.theme__sheet-column-right {
			order: 1;
		}
	}
}

.theme__sheet-columns.is-removed {
	justify-content: center;
}

.theme__sheet-column-header {
	grid-area: header;
	margin-bottom: 24px;

	@include breakpoint-deprecated( "<960px" ) {
		margin-bottom: 0;
	}

	h2 {
		font-size: $font-body;
		font-weight: 500;
		line-height: 24px;
		margin: 0;
	}

	.theme__sheet-header {
		display: flex;
		flex-direction: column;
		gap: 40px;

		@include breakpoint-deprecated( "<960px" ) {
			gap: 16px;
		}
	}

	.theme__sheet-main {
		align-items: center;
		display: flex;
		flex-wrap: wrap;
		gap: 16px;
		justify-content: space-between;

		@include breakpoint-deprecated( "<960px" ) {
			align-items: flex-start;
			flex-direction: column;
			padding: 0 24px;
		}
	}

	.theme__sheet-main-actions {
		display: flex;
		gap: 10px;

		@include breakpoint-deprecated( "<960px" ) {
			flex-direction: column;
			width: 100%;
		}

		.button {
			border-radius: $button-border;

			@include breakpoint-deprecated( "<960px" ) {
				width: 100%;
			}
		}

		.theme__sheet-primary-button {
			position: relative;
			right: auto;
			top: auto;
			margin-right: 0 !important;
		}
	}

	.theme__sheet-main-info-title {
		@include onboarding-font-recoleta;
		align-items: center;
		display: flex;
		font-size: $font-title-large;
		line-height: 1;
	}

	.theme__sheet-main-info-type {
		margin-left: 8px;

		&.is-soft-launched {
			flex-basis: unset;
		}
	}

	.theme__sheet-main-info-tag {
		color: var(--color-neutral-60);
		font-size: $font-body;
		font-weight: 400;
		letter-spacing: -0.32px;
		line-height: 24px;
	}
}

.theme__sheet-column-left,
.theme__sheet-column-right {
	align-items: flex-start;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	width: 100%;

	@include breakpoint-deprecated( "<960px" ) {
		width: 100%;
	}
}

.theme__sheet-column-left {
	grid-area: content;
}

.theme__sheet-column-right {
	grid-area: preview;
}

.theme__sheet-action-bar-container {
	box-shadow: 0 1px var(--color-border-subtle);
}

.header-cake.card.theme__sheet-action-bar {
	box-shadow: none;
	box-sizing: content-box;
	margin: 0 auto;
	max-width: $theme-sheet-content-max-width;
	min-height: 70px;
	padding: 0 20px;
	position: relative;

	@include breakpoint-deprecated( "<960px" ) {
		margin: 0 0 32px 0;
		min-height: 60px;
	}
}

.is-mobile-app-view .header-cake.card.theme__sheet-action-bar {
	display: none;
}

.theme__sheet-primary-button {
	position: absolute;
	top: 5px;
	right: 50%;
	margin-right: 20px !important;

	.theme__sheet-badge-beta {
		background-color: var(--color-surface);
		margin-left: 10px;
	}

	@include breakpoint-deprecated( "<960px" ) {
		margin-right: 0;
		position: absolute;
		top: 5px;
		right: 5px;
	}
}

.theme__sheet-customize-button {
	.gridicon {
		margin-right: 4px;
	}
	&.spin {
		.gridicons-sync > use:first-child,
		.gridicons-sync > g:first-child {
			animation: spinning-sync-icon linear 2s infinite;
			transform-origin: center;
		}
	}
}

@keyframes spinning-sync-icon {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

.theme__sheet-button-placeholder {
	color: transparent;
}

.theme__sheet-preview-nav-item {
	margin-left: auto;

	@include breakpoint-deprecated( "<960px" ) {
		display: none;
	}
}
/* ... */

